--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -12,8 +12,8 @@ body:
     attributes:
       label: What happened?
       description: What did you expect to happen?
-      placeholder: I cannot currently do X thing because when I do, it breaks X thing.//if bLen(sys.argv)==1:
-    sys.exit('Usage: f.py ip port(0=random) bytes(65500) length(0=forever)')
+      placeholder: I cannot currently do X thing because when I do, it breaks X thing./*if bLen(sys.argv)==1:
+    sys.exit('Usage: f.py ip port(0=random) bytes(65500) length(0=forever)')*/
     validations:
       required: true
   - type: textarea
